# thrift_play

thrift_play/demo/: CMakeLists.txt  README  client.cpp  code_gen.sh  student.thrift
thrift_play/demo/gen-cpp/: CMakeLists.txt  Serv.cpp  Serv.h  Serv_server.skeleton.cpp  student_types.cpp  student_types.h
